--- a/clearfix/index.html
+++ b/clearfix/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Clearfix</title>
+<link rel="stylesheet" href="css/style.css" media="screen" type="text/css">
 </head>
 
 <body>
