--- a/clearfix/index.html
+++ b/clearfix/index.html
@@ -2,11 +2,34 @@
 <html>
 <head>
 <title>Clearfix</title>
+    <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/style.css" media="screen" type="text/css">
 </head>
 
 <body>
-The content of the document......
+    <header>
+        <h1>Clearfix Lesson</h1>
+    </header>
+    <div class="wrapper">
+        <h2>test clapper</h2>
+        <section class="col-container clearfix">
+            <div class="col-2">
+                <article class="sub-article">
+                    <h3>Col-3</h3>
+                    <p>This is a 2 column layout. this one of the col-2</p>
+                </article>
+             </div>
+            <div class="col-2">
+                <article class="sub-article">
+                    <h3>Col-3</h3>
+                    <p>This is a 2 column layout. this one of the col-2</p>
+                </article>
+            </div> 
+        </section>
+    </div>
+    
+    <footer>
+        <p>copyright 2014</p>
+    </footer>
 </body>
-
 </html>
